make saving of performance dictionary more robust and if it fails, no longer break the saving of performance data; tidy code for due dates

--- a/apps/dashboard/static/css/dashboard.css
+++ b/apps/dashboard/static/css/dashboard.css
@@ -323,13 +323,18 @@ ul li input {
   height: 150px;
 }
 
-.due-date-hours-exceed {
-  background-image: url(../img/hours-exceed.png) !important;
+.no-due-date {
+  background-image: url(../img/complete.png) !important;
   background-size: contain;
 }
 
-.due-date-days-exceed {
-  background-image: url(../img/days-exceed.png) !important;
+.due-date-tardy {
+  background-image: url(../img/tardy.png) !important;
+  background-size: contain;
+}
+
+.due-date-late {
+  background-image: url(../img/late.png) !important;
   background-size: contain;
 }
 
